adding comments and bumping version due to vulnerability threats